création header et partie recherche par localité

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./Utils/variables";
 @import "./Utils/mixins";
 @import "./Base/body";
-@import "./Base/polices"
+@import "./Base/polices";
+@import "./Pages/accueil";
