--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -1,11 +1,78 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap");
-h1, h2 {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0px;
+}
+
+h1 {
   font-family: "Shrikhand", Arial, Helvetica, sans-serif;
 }
 
-p {
+body {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
+header img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+
+/*Recherche par ville*/
+.recherche {
+  background-color: #eaeaea;
+  display: flex;
+  justify-content: center;
+  box-shadow: inset 0px 5px 5px 0px #dddddd;
+  margin-top: 1em;
+}
+.recherche i {
+  font-size: 2.5em;
+  padding: 2rem;
+  margin-left: 10%;
+}
+.recherche input {
+  background-color: #eaeaea;
+  font-size: 2.2em;
+  border: none;
+  box-shadow: inset 0px 5px 5px 0px #dddddd;
+}
+.recherche input:focus-visible {
+  outline: none;
+}
+
+.explorez {
+  background-color: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.explorez h2 {
+  font-size: 4em;
+  text-align: center;
+  margin: 1.5em 2em 0.5em 2em;
+}
+.explorez p {
+  font-size: 3em;
+  text-align: center;
+  margin-top: 0em;
+}
+
+.bouton_recherche {
+  font-size: 2.5em;
+  color: white;
+  background-color: #FF79DA;
+  padding: 1em 1em;
+  border-radius: 80px;
+  border: none;
+  box-shadow: inset -1.5em -1.5em 3em #9e5adc, 0.1em 0.1em 0.2em #c5c5c5, -0.1em 0em 0.2em #c5c5c5;
+  margin-bottom: 3.5em;
 }
 
 /*# sourceMappingURL=style.css.map */
