--- a/sass/Base/_polices.scss
+++ b/sass/Base/_polices.scss
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
 
-h1, h2 {
+h1 {
     font-family: "Shrikhand", Arial, Helvetica, sans-serif ;
 }
 
-p {
+body {
     font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
