--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -53,6 +53,53 @@ header img {
     padding: 1em 1em;
     border-radius: 80px;
     border: none;
-    box-shadow: inset -1.5em -1.5em 3em #9e5adc, 0.1em 0.1em 0.2em #c5c5c5, -0.1em 0em 0.2em #c5c5c5;
+    box-shadow: inset -1.5em -1.5em 3em $color-primary, 0.1em 0.1em 0.2em #c5c5c5, -0.1em 0em 0.2em #c5c5c5;
     margin-bottom: 3.5em;
+}
+
+/**Partie tutoriel**/
+
+.tuto {
+    margin: 4em 4em;
+    & h2 {
+        font-size: 4em;
+        margin-top: 1.5em;
+        margin-bottom: 0.2em;
+    }
+    &__etapes {
+        display: flex;
+        flex-direction: column;
+        &__detail {
+            display: flex;
+            justify-content: center;
+            background-color: #f6f6f6;
+            border-radius: 40px;
+            box-shadow: 0.2em 0.2em 0.6em #d4d4d4, -0.2em 0em 0.6em #d4d4d4;
+            margin: 2em 2em;
+            padding: 1em;
+            min-width: 650px;            
+            &__texte {
+                font-size: 2.5em;
+                margin-right: 40px;
+                width: 75%;
+                text-align: center;
+            }
+            & i {
+                line-height: 128px;
+                font-size: 3em;
+                color: #5b5b5b;
+            }
+            &__chiffre {
+                font-size: 2.5em;
+                color: #ffff;
+                background-color: $color-primary;
+                border-radius: 50%;
+                width: 1.2em;
+                height: 1.2em;
+                text-align: center;
+                position: relative;
+                left: -9%;
+            }
+        }
+    }
 }
