ajout de l'effet hover sur les boutons du tuto

--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -77,17 +77,18 @@ header img {
             box-shadow: 0.2em 0.2em 0.6em #d4d4d4, -0.2em 0em 0.6em #d4d4d4;
             margin: 2em 2em;
             padding: 1em;
-            min-width: 650px;            
+            max-width: 900px;
+            position: relative;            
+            & i {
+                line-height: 128px;
+                font-size: 3em;
+                color: #5b5b5b;
+            }
             &__texte {
                 font-size: 2.5em;
                 margin-right: 40px;
                 width: 75%;
                 text-align: center;
-            }
-            & i {
-                line-height: 128px;
-                font-size: 3em;
-                color: #5b5b5b;
             }
             &__chiffre {
                 font-size: 2.5em;
@@ -97,8 +98,11 @@ header img {
                 width: 1.2em;
                 height: 1.2em;
                 text-align: center;
-                position: relative;
-                left: -9%;
+                position: absolute;
+                left: -3%;
+            }
+            &:hover {
+                background-color: #f5edff;
             }
         }
     }
