--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -74,7 +74,7 @@ header img {
             justify-content: center;
             background-color: #f6f6f6;
             border-radius: 40px;
-            box-shadow: 0.2em 0.2em 0.6em #d4d4d4, -0.2em 0em 0.6em #d4d4d4;
+            box-shadow: 0em 0.2em 0.6em #d4d4d4;
             margin: 2em 2em;
             padding: 1em;
             max-width: 900px;
@@ -104,6 +104,99 @@ header img {
             &:hover {
                 background-color: #f5edff;
             }
+        }
+    }
+}
+
+/**Présentation des restaurants**/
+.restaurants {
+    background-color: #f6f6f6;
+    & a {
+        text-decoration: none;
+        color: black;
+    }
+    & h2 {
+        font-size: 4em;
+        margin: 1em 0em 0.5em 0.9em;
+        padding-top: 1.5em;
+    }
+    &__align {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 5em;
+    }
+    &__card {
+        width: 90%;
+        background-color: #ffff;
+        border-radius: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 3em;
+        box-shadow: 0em 0.2em 0.6em #d4d4d4;
+        &__image {
+            height: 450px;
+            display: flex;
+            & img {
+                width: 100%;
+                align-items: center;
+                object-fit: cover;
+                border-radius: 30px 30px 0px 0px;
+            }
+        }
+        &__body {
+            display: flex;
+            justify-content: space-between;
+            & i {
+                font-size: 4em;
+                position: relative;
+                top: 50px;
+                right: 50px;
+                color: #ffff;
+                text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+                &:hover {
+                    color: $color-primary;
+                    text-shadow: 0 10px $color-secondary;
+                }
+            }
+        }
+        &__text {
+            margin: 1em 2em;
+            & h3 {
+                font-size: 2.8em;
+                margin: 0.3em 0em;
+            }
+            & p {
+                font-size: 2.5em;
+                margin: 0.1em 0em;
+            }
+        }
+    }
+}
+
+/**Footer**/
+footer {
+    background-color: #383434;
+    color: #f6f6f6;
+    font-size: 2.4em;
+    padding-bottom: 2em;
+    & img {
+        margin: 1em 0em 0.3em 1.8em;
+        width: 250px;
+    }
+}
+
+.footer-list {
+    display: flex;
+    flex-direction: column;
+    margin-left: 1.8em;
+    & p {
+        margin: 0.4em 0em;
+    }
+    &__with-icon {
+        display: flex;
+        align-items: center;
+        & i {
+            margin-right: 0.5em;
         }
     }
 }
