ajout linear-gradient et footer.scss

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,5 @@
 @import "./Utils/mixins";
 @import "./Base/body";
 @import "./Base/polices";
+@import "./Layout/_footer";
 @import "./Pages/accueil";
