--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -17,6 +17,34 @@ body {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
+/**Footer**/
+footer {
+  background-color: #383434;
+  color: #f6f6f6;
+  font-size: 2.4em;
+  padding-bottom: 2em;
+}
+footer img {
+  margin: 1em 0em 0.3em 1.8em;
+  width: 250px;
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1.8em;
+}
+.footer-list p {
+  margin: 0.4em 0em;
+}
+.footer-list__with-icon {
+  display: flex;
+  align-items: center;
+}
+.footer-list__with-icon i {
+  margin-right: 0.5em;
+}
+
 header img {
   display: block;
   margin-left: auto;
@@ -125,6 +153,9 @@ header img {
 .tuto__etapes__detail:hover {
   background-color: #f5edff;
 }
+.tuto__etapes__detail:hover i {
+  color: #9356DC;
+}
 
 /**Présentation des restaurants**/
 .restaurants {
@@ -176,8 +207,12 @@ header img {
   text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
 }
 .restaurants__card__body i:hover {
-  color: #9356DC;
-  text-shadow: 0 10px #FF79DA;
+  text-shadow: none;
+  background: linear-gradient(to bottom, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 40%);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .restaurants__card__text {
   margin: 1em 2em;
@@ -189,34 +224,6 @@ header img {
 .restaurants__card__text p {
   font-size: 2.5em;
   margin: 0.1em 0em;
-}
-
-/**Footer**/
-footer {
-  background-color: #383434;
-  color: #f6f6f6;
-  font-size: 2.4em;
-  padding-bottom: 2em;
-}
-footer img {
-  margin: 1em 0em 0.3em 1.8em;
-  width: 250px;
-}
-
-.footer-list {
-  display: flex;
-  flex-direction: column;
-  margin-left: 1.8em;
-}
-.footer-list p {
-  margin: 0.4em 0em;
-}
-.footer-list__with-icon {
-  display: flex;
-  align-items: center;
-}
-.footer-list__with-icon i {
-  margin-right: 0.5em;
 }
 
 /*# sourceMappingURL=style.css.map */
