--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -103,6 +103,9 @@ header img {
             }
             &:hover {
                 background-color: #f5edff;
+                & i {
+                    color: $color-primary;
+                }
             }
         }
     }
@@ -154,8 +157,12 @@ header img {
                 color: #ffff;
                 text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
                 &:hover {
-                    color: $color-primary;
-                    text-shadow: 0 10px $color-secondary;
+                    text-shadow: none;
+                    background: linear-gradient(to bottom, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 40%);
+                    -webkit-background-clip: text;
+                    -moz-background-clip: text;
+                    background-clip: text;
+                    -webkit-text-fill-color:transparent;
                 }
             }
         }
@@ -169,34 +176,6 @@ header img {
                 font-size: 2.5em;
                 margin: 0.1em 0em;
             }
-        }
-    }
-}
-
-/**Footer**/
-footer {
-    background-color: #383434;
-    color: #f6f6f6;
-    font-size: 2.4em;
-    padding-bottom: 2em;
-    & img {
-        margin: 1em 0em 0.3em 1.8em;
-        width: 250px;
-    }
-}
-
-.footer-list {
-    display: flex;
-    flex-direction: column;
-    margin-left: 1.8em;
-    & p {
-        margin: 0.4em 0em;
-    }
-    &__with-icon {
-        display: flex;
-        align-items: center;
-        & i {
-            margin-right: 0.5em;
         }
     }
 }
