--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,5 +2,6 @@
 @import "./Utils/mixins";
 @import "./Base/body";
 @import "./Base/polices";
-@import "./Layout/_footer";
+@import "./Layout/footer";
+@import "./Layout/menu";
 @import "./Pages/accueil";
