--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -45,6 +45,13 @@ footer img {
   margin-right: 0.5em;
 }
 
+.menu_image {
+  width: 100%;
+}
+.menu_image img {
+  width: 100%;
+}
+
 header img {
   display: block;
   margin-left: auto;
@@ -102,6 +109,9 @@ header img {
   border: none;
   box-shadow: inset -1.5em -1.5em 3em #9356DC, 0.1em 0.1em 0.2em #c5c5c5, -0.1em 0em 0.2em #c5c5c5;
   margin-bottom: 3.5em;
+}
+.bouton_recherche:hover {
+  cursor: pointer;
 }
 
 /**Partie tutoriel**/
