--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,5 +3,6 @@
 @import "./Base/body";
 @import "./Base/polices";
 @import "./Layout/footer";
+@import "./Layout/heart-icon";
 @import "./Layout/menu";
 @import "./Pages/accueil";
