--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -47,11 +47,17 @@ footer img {
 
 .heart-icon {
   font-size: 4em;
+  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+}
+.heart-icon--homepage {
   position: relative;
   top: 50px;
   right: 50px;
   color: white;
-  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+}
+.heart-icon--menupage {
+  margin-right: 1.5em;
+  color: #f6f6f6;
 }
 .heart-icon:hover {
   text-shadow: none;
@@ -78,6 +84,101 @@ footer img {
   left: 80px;
   top: 20px;
   color: black;
+}
+
+.menu_dishes {
+  background-color: #f6f6f6;
+  border-radius: 100px 100px 0px 0px;
+  position: relative;
+  bottom: 120px;
+}
+.menu_dishes__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu_dishes__header h1 {
+  font-size: 4.4em;
+  font-weight: normal;
+  margin: 50px 0px 50px 35px;
+}
+.menu_dishes__details__title {
+  width: 92%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -35px;
+  position: relative;
+}
+.menu_dishes__details__title:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  width: 11%;
+  border-bottom: 6px solid #99E2D0;
+}
+.menu_dishes__details__title p {
+  font-size: 2.5em;
+}
+
+.dishes-card {
+  width: 95%;
+  background-color: #ffffff;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 30px;
+  box-shadow: 0em 0.2em 0.6em #d4d4d4;
+  display: flex;
+  justify-content: space-between;
+}
+.dishes-card__text {
+  overflow: hidden;
+}
+.dishes-card__text p:first-child {
+  font-size: 2.7em;
+  font-weight: bold;
+  margin: 30px 20px 10px 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.dishes-card__text p:last-child {
+  font-size: 2.2em;
+  margin: 10px 20px 30px 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.dishes-card__price {
+  display: flex;
+  align-items: flex-end;
+}
+.dishes-card__price p {
+  font-size: 2.1em;
+  font-weight: bold;
+  margin: 30px;
+}
+.dishes-card__price__icon {
+  background-color: #99E2D0;
+  width: 150px;
+  height: 100%;
+  border-radius: 0px 30px 30px 0px;
+  display: none;
+}
+.dishes-card__price__icon i {
+  color: #99E2D0;
+  font-size: 2.4em;
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  padding-left: 8%;
+  margin: 50px 45px 50px 45px;
+}
+
+.dishes-card:hover .dishes-card__price__icon {
+  display: block;
 }
 
 header img {
