--- a/sass/Layout/_heart-icon.scss
+++ b/sass/Layout/_heart-icon.scss
@@ -1,10 +1,16 @@
 .heart-icon {
     font-size: 4em;
-    position: relative;
-    top: 50px;
-    right: 50px;
-    color: #ffff;
     text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+    &--homepage {
+        position: relative;
+        top: 50px;
+        right: 50px;
+        color: #ffff;
+    }
+    &--menupage {
+        margin-right: 1.5em;
+        color: #f6f6f6;
+    }
     &:hover {
         text-shadow: none;
         background: linear-gradient(to bottom, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 40%);
