--- a/sass/Layout/_menu.scss
+++ b/sass/Layout/_menu.scss
@@ -15,3 +15,99 @@
         color: black;
     }
 }
+
+.menu_dishes {
+    background-color: #f6f6f6;
+    border-radius: 100px 100px 0px 0px;
+    position: relative;
+    bottom: 120px;
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        & h1 {
+            font-size: 4.4em;
+            font-weight: normal;
+            margin: 50px 0px 50px 35px;
+        }
+    }
+    &__details {
+        &__title {
+            width: 92%;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: -35px;
+            position: relative;
+            &:before {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: -10px;
+                width: 11%;
+                border-bottom: 6px solid $color-tertiary;
+            }
+            & p {
+                font-size: 2.5em;
+            }
+        }
+    }
+}
+
+.dishes-card {
+    width: 95%;
+    background-color: #ffffff;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 30px;
+    box-shadow: 0em 0.2em 0.6em #d4d4d4;
+    display: flex;
+    justify-content: space-between;
+    &__text {
+        overflow: hidden;
+    }
+    &__text p:first-child {
+        font-size: 2.7em;
+        font-weight: bold;
+        margin: 30px 20px 10px 20px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    &__text p:last-child {
+        font-size: 2.2em;
+        margin: 10px 20px 30px 20px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    &__price {
+        display: flex;
+        align-items: flex-end;
+        & p {
+            font-size: 2.1em;
+            font-weight: bold;
+            margin: 30px;
+        }
+        &__icon {
+            background-color: $color-tertiary;
+            width: 150px;
+            height: 100%;
+            border-radius: 0px 30px 30px 0px;
+            display: none;
+            & i {
+                color: $color-tertiary;
+                font-size: 2.4em;
+                background-color: #ffffff;
+                border-radius: 50%;
+                width: 60px;
+                height: 60px;
+                line-height: 60px;
+                padding-left: 8%;
+                margin: 50px 45px 50px 45px;
+            }
+        }
+    }
+}
+.dishes-card:hover .dishes-card__price__icon {
+    display: block;
+}
