--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,5 +4,6 @@
 @import "./Base/polices";
 @import "./Layout/footer";
 @import "./Layout/heart-icon";
+@import "./Layout/button";
 @import "./Layout/menu";
 @import "./Pages/accueil";
