--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -56,7 +56,7 @@ footer img {
   color: white;
 }
 .heart-icon--menupage {
-  margin-right: 1.5em;
+  margin: 80px 70px 0px 10px;
   color: #f6f6f6;
 }
 .heart-icon:hover {
@@ -66,6 +66,29 @@ footer img {
   -moz-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.button {
+  font-size: 2.5em;
+  color: white;
+  background-color: #FF79DA;
+  border-radius: 80px;
+  border: none;
+  box-shadow: inset -1.5em -1.5em 3em #9356DC, 0.1em 0.1em 0.2em #c5c5c5, -0.1em 0em 0.2em #c5c5c5;
+}
+.button:hover {
+  cursor: pointer;
+}
+.button--search {
+  margin-bottom: 3.5em;
+  padding: 1em 1em;
+}
+.button--order {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em 3.5em;
+  margin-top: 3em;
+  margin-bottom: 4em;
 }
 
 .menu_image {
@@ -100,13 +123,16 @@ footer img {
 .menu_dishes__header h1 {
   font-size: 4.4em;
   font-weight: normal;
-  margin: 50px 0px 50px 35px;
+  margin: 80px 0px 0px 35px;
+}
+.menu_dishes__details {
+  margin-bottom: -120px;
 }
 .menu_dishes__details__title {
   width: 92%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -35px;
+  margin-top: 80px;
   position: relative;
 }
 .menu_dishes__details__title:before {
@@ -126,6 +152,7 @@ footer img {
   background-color: #ffffff;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 35px;
   border-radius: 30px;
   box-shadow: 0em 0.2em 0.6em #d4d4d4;
   display: flex;
@@ -135,7 +162,7 @@ footer img {
   overflow: hidden;
 }
 .dishes-card__text p:first-child {
-  font-size: 2.7em;
+  font-size: 3em;
   font-weight: bold;
   margin: 30px 20px 10px 20px;
   white-space: nowrap;
@@ -143,7 +170,7 @@ footer img {
   text-overflow: ellipsis;
 }
 .dishes-card__text p:last-child {
-  font-size: 2.2em;
+  font-size: 2.5em;
   margin: 10px 20px 30px 20px;
   white-space: nowrap;
   overflow: hidden;
@@ -154,7 +181,7 @@ footer img {
   align-items: flex-end;
 }
 .dishes-card__price p {
-  font-size: 2.1em;
+  font-size: 2.5em;
   font-weight: bold;
   margin: 30px;
 }
@@ -174,11 +201,15 @@ footer img {
   height: 60px;
   line-height: 60px;
   padding-left: 8%;
-  margin: 50px 45px 50px 45px;
+  margin: 60px 45px 0px 45px;
 }
 
 .dishes-card:hover .dishes-card__price__icon {
   display: block;
+}
+
+.button_align {
+  text-align: center;
 }
 
 header img {
@@ -227,20 +258,6 @@ header img {
   font-size: 3em;
   text-align: center;
   margin-top: 0em;
-}
-
-.bouton_recherche {
-  font-size: 2.5em;
-  color: white;
-  background-color: #FF79DA;
-  padding: 1em 1em;
-  border-radius: 80px;
-  border: none;
-  box-shadow: inset -1.5em -1.5em 3em #9356DC, 0.1em 0.1em 0.2em #c5c5c5, -0.1em 0em 0.2em #c5c5c5;
-  margin-bottom: 3.5em;
-}
-.bouton_recherche:hover {
-  cursor: pointer;
 }
 
 /**Partie tutoriel**/
