--- a/sass/Layout/_menu.scss
+++ b/sass/Layout/_menu.scss
@@ -28,15 +28,16 @@
         & h1 {
             font-size: 4.4em;
             font-weight: normal;
-            margin: 50px 0px 50px 35px;
+            margin: 80px 0px 0px 35px;
         }
     }
     &__details {
+        margin-bottom: -120px;
         &__title {
             width: 92%;
             margin-left: auto;
             margin-right: auto;
-            margin-top: -35px;
+            margin-top: 80px;
             position: relative;
             &:before {
                 content: "";
@@ -58,6 +59,7 @@
     background-color: #ffffff;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 35px;
     border-radius: 30px;
     box-shadow: 0em 0.2em 0.6em #d4d4d4;
     display: flex;
@@ -66,7 +68,7 @@
         overflow: hidden;
     }
     &__text p:first-child {
-        font-size: 2.7em;
+        font-size: 3em;
         font-weight: bold;
         margin: 30px 20px 10px 20px;
         white-space: nowrap;
@@ -74,7 +76,7 @@
         text-overflow: ellipsis;
     }
     &__text p:last-child {
-        font-size: 2.2em;
+        font-size: 2.5em;
         margin: 10px 20px 30px 20px;
         white-space: nowrap;
         overflow: hidden;
@@ -84,7 +86,7 @@
         display: flex;
         align-items: flex-end;
         & p {
-            font-size: 2.1em;
+            font-size: 2.5em;
             font-weight: bold;
             margin: 30px;
         }
@@ -103,11 +105,15 @@
                 height: 60px;
                 line-height: 60px;
                 padding-left: 8%;
-                margin: 50px 45px 50px 45px;
+                margin: 60px 45px 0px 45px;
             }
         }
     }
 }
 .dishes-card:hover .dishes-card__price__icon {
     display: block;
+}
+
+.button_align {
+    text-align: center;
 }
