--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -93,9 +93,13 @@ footer img {
 
 .menu_image {
   width: 100%;
+  height: 700px;
+  display: flex;
 }
 .menu_image img {
   width: 100%;
+  object-fit: cover;
+  align-items: center;
 }
 
 .menu_logo {
@@ -272,6 +276,7 @@ header img {
 .tuto__etapes {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .tuto__etapes__detail {
   display: flex;
@@ -281,7 +286,7 @@ header img {
   box-shadow: 0em 0.2em 0.6em #d4d4d4;
   margin: 2em 2em;
   padding: 1em;
-  max-width: 900px;
+  width: 95%;
   position: relative;
 }
 .tuto__etapes__detail i {
