--- a/sass/Layout/_menu.scss
+++ b/sass/Layout/_menu.scss
@@ -1,7 +1,11 @@
 .menu_image {
     width: 100%;
+    height: 700px;
+    display: flex;
     & img {
         width: 100%;
+        object-fit: cover;
+        align-items: center;
     }
 }
 
