--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -58,6 +58,7 @@ header img {
     &__etapes {
         display: flex;
         flex-direction: column;
+        align-items: center;
         &__detail {
             display: flex;
             justify-content: center;
@@ -66,7 +67,7 @@ header img {
             box-shadow: 0em 0.2em 0.6em #d4d4d4;
             margin: 2em 2em;
             padding: 1em;
-            max-width: 900px;
+            width: 95%;
             position: relative;            
             & i {
                 line-height: 128px;
