--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -161,6 +161,7 @@ footer img {
   box-shadow: 0em 0.2em 0.6em #d4d4d4;
   display: flex;
   justify-content: space-between;
+  overflow: hidden;
 }
 .dishes-card__text {
   overflow: hidden;
@@ -183,6 +184,8 @@ footer img {
 .dishes-card__price {
   display: flex;
   align-items: flex-end;
+  transform: translate(150px, 0px);
+  transition: transform 1000ms;
 }
 .dishes-card__price p {
   font-size: 2.5em;
@@ -194,7 +197,6 @@ footer img {
   width: 150px;
   height: 100%;
   border-radius: 0px 30px 30px 0px;
-  display: none;
 }
 .dishes-card__price__icon i {
   color: #99E2D0;
@@ -206,10 +208,16 @@ footer img {
   line-height: 60px;
   padding-left: 8%;
   margin: 60px 45px 0px 45px;
+  transform: rotate(720deg);
+  transition: transform 1000ms;
 }
 
-.dishes-card:hover .dishes-card__price__icon {
-  display: block;
+.dishes-card:hover > .dishes-card__price {
+  transform: translate(0, 0);
+}
+
+.dishes-card:hover > .dishes-card__price i {
+  transform: rotate(0deg);
 }
 
 .button_align {
