--- a/sass/Layout/_menu.scss
+++ b/sass/Layout/_menu.scss
@@ -68,6 +68,7 @@
     box-shadow: 0em 0.2em 0.6em #d4d4d4;
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
     &__text {
         overflow: hidden;
     }
@@ -89,6 +90,8 @@
     &__price {
         display: flex;
         align-items: flex-end;
+        transform: translate(150px, 0px);
+        transition: transform 1000ms;
         & p {
             font-size: 2.5em;
             font-weight: bold;
@@ -99,7 +102,6 @@
             width: 150px;
             height: 100%;
             border-radius: 0px 30px 30px 0px;
-            display: none;
             & i {
                 color: $color-tertiary;
                 font-size: 2.4em;
@@ -110,12 +112,18 @@
                 line-height: 60px;
                 padding-left: 8%;
                 margin: 60px 45px 0px 45px;
+                transform: rotate(720deg);
+                transition: transform 1000ms;
             }
         }
     }
 }
-.dishes-card:hover .dishes-card__price__icon {
-    display: block;
+.dishes-card:hover > .dishes-card__price {
+    transform: translate(0,0);
+}
+
+.dishes-card:hover > .dishes-card__price i {
+    transform: rotate(0deg);
 }
 
 .button_align {
