added new version of the "check" animation

--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -184,8 +184,8 @@ footer img {
 .dishes-card__price {
   display: flex;
   align-items: flex-end;
-  transform: translate(150px, 0px);
-  transition: transform 1000ms;
+  margin-right: -9.5em;
+  transition-duration: 500ms;
 }
 .dishes-card__price p {
   font-size: 2.5em;
@@ -213,7 +213,7 @@ footer img {
 }
 
 .dishes-card:hover > .dishes-card__price {
-  transform: translate(0, 0);
+  margin-right: 0em;
 }
 
 .dishes-card:hover > .dishes-card__price i {
