--- a/.public/css/style.css
+++ b/.public/css/style.css
@@ -1,6 +1,16 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap");
+@keyframes dishes-appearance {
+  from {
+    opacity: 0.1;
+    transform: translateY(2em);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0em);
+  }
+}
 * {
   box-sizing: border-box;
 }
@@ -162,6 +172,39 @@ footer img {
   display: flex;
   justify-content: space-between;
   overflow: hidden;
+  opacity: 0;
+  transform: translateY(2em);
+  animation: dishes-appearance 500ms forwards;
+}
+.dishes-card--1 {
+  animation-delay: 150ms;
+}
+.dishes-card--2 {
+  animation-delay: 300ms;
+}
+.dishes-card--3 {
+  animation-delay: 450ms;
+}
+.dishes-card--4 {
+  animation-delay: 600ms;
+}
+.dishes-card--5 {
+  animation-delay: 750ms;
+}
+.dishes-card--6 {
+  animation-delay: 900ms;
+}
+.dishes-card--7 {
+  animation-delay: 1050ms;
+}
+.dishes-card--8 {
+  animation-delay: 1200ms;
+}
+.dishes-card--9 {
+  animation-delay: 1350ms;
+}
+.dishes-card--10 {
+  animation-delay: 1500ms;
 }
 .dishes-card__text {
   overflow: hidden;
