--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -1,3 +1,7 @@
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
+
+$num-dishes: 10;
+$anim-duration: 1500ms;
+$anim-delay: $anim-duration / $num-dishes;
