--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./Utils/variables";
 @import "./Utils/mixins";
+@import "./Utils/keyframes";
 @import "./Base/body";
 @import "./Base/polices";
 @import "./Layout/footer";
