--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -8,14 +8,21 @@ footer {
         margin: 1em 0em 0.3em 1.8em;
         width: 250px;
     }
+    &__link {
+        margin: 0.4em 0em;
+        text-decoration: none;
+        color: #f6f6f6;
+    }
 }
 
 .footer-list {
     display: flex;
     flex-direction: column;
     margin-left: 1.8em;
-    & p {
+    & a {
         margin: 0.4em 0em;
+        text-decoration: none;
+        color: #f6f6f6;
     }
     &__with-icon {
         display: flex;
