--- a/sass/Layout/_button.scss
+++ b/sass/Layout/_button.scss
@@ -1,5 +1,5 @@
 .button {
-    font-size: 2.5em;
+    font-size: 1.2em;
     color: #ffff;
     background-color: $color-secondary;
     border-radius: 80px;
@@ -10,6 +10,7 @@
     }
     &--search {
         margin-bottom: 3.5em;
+        margin-top: 1em;
         padding: 1em 1em;
     }
     &--order {
