--- a/sass/Layout/_heart-icon.scss
+++ b/sass/Layout/_heart-icon.scss
@@ -1,14 +1,15 @@
 .heart-icon {
-    font-size: 4em;
+    font-size: 1.8em;
     text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+    padding-right: 10px;
     &--homepage {
         position: relative;
-        top: 50px;
-        right: 50px;
+        top: 20px;
+        right: 20px;
         color: #ffff;
     }
     &--menupage {
-        margin: 80px 70px 0px 10px;
+        margin: 30px 20px 0px 0px;
         color: #f6f6f6;
     }
     &:hover {
