--- a/sass/Layout/_menu.scss
+++ b/sass/Layout/_menu.scss
@@ -1,6 +1,6 @@
 .menu_image {
     width: 100%;
-    height: 700px;
+    height: 320px;
     display: flex;
     & img {
         width: 100%;
@@ -12,27 +12,27 @@
 .menu_logo {
     display: flex;
     & i {
-        font-size: 3em;
+        font-size: 1.5em;
         position: relative;
-        left: 80px;
-        top: 20px;
+        left: 20px;
+        top: 15px;
         color: black;
     }
 }
 
 .menu_dishes {
     background-color: #f6f6f6;
-    border-radius: 100px 100px 0px 0px;
+    border-radius: 50px 50px 0px 0px;
     position: relative;
-    bottom: 120px;
+    bottom: 60px;
     &__header {
         display: flex;
         justify-content: space-between;
         align-items: center;
         & h1 {
-            font-size: 4.4em;
+            font-size: 1.8em;
             font-weight: normal;
-            margin: 80px 0px 0px 35px;
+            margin: 30px 0px 0px 20px;
         }
     }
     &__details {
@@ -41,18 +41,18 @@
             width: 92%;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 80px;
+            margin-top: 40px;
             position: relative;
             &:before {
                 content: "";
                 position: absolute;
                 left: 0;
-                bottom: -10px;
-                width: 11%;
-                border-bottom: 6px solid $color-tertiary;
+                bottom: -5px;
+                width: 13%;
+                border-bottom: 3px solid $color-tertiary;
             }
             & p {
-                font-size: 2.5em;
+                font-size: 1.3em;
             }
         }
     }
@@ -63,13 +63,14 @@
     background-color: #ffffff;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 35px;
-    border-radius: 30px;
+    margin-top: 18px;
+    border-radius: 20px;
     box-shadow: 0em 0.2em 0.6em #d4d4d4;
     display: flex;
     justify-content: space-between;
     overflow: hidden;
     opacity: 0;
+    max-width: 600px;
     transform: translateY(2em);
     animation: dishes-appearance 500ms forwards;
     @for $i from 1 through $num-dishes {
@@ -81,16 +82,16 @@
         overflow: hidden;
     }
     &__text p:first-child {
-        font-size: 3em;
+        font-size: 1.2em;
         font-weight: bold;
-        margin: 30px 20px 10px 20px;
+        margin: 10px 0px 0px 10px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
     }
     &__text p:last-child {
-        font-size: 2.5em;
-        margin: 10px 20px 30px 20px;
+        font-size: 1em;
+        margin: 10px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -98,28 +99,28 @@
     &__price {
         display: flex;
         align-items: flex-end;
-        margin-right: -9.5em;
+        margin-right: -5.5em;
         transition-duration: 500ms;
         & p {
-            font-size: 2.5em;
+            font-size: 1.2em;
             font-weight: bold;
-            margin: 30px;
+            margin: 40px 20px 10px 20px;
         }
         &__icon {
             background-color: $color-tertiary;
-            width: 150px;
+            width: 75px;
             height: 100%;
-            border-radius: 0px 30px 30px 0px;
+            border-radius: 0px 20px 20px 0px;
             & i {
                 color: $color-tertiary;
-                font-size: 2.4em;
+                font-size: 1.2em;
                 background-color: #ffffff;
                 border-radius: 50%;
-                width: 60px;
-                height: 60px;
-                line-height: 60px;
+                width: 30px;
+                height: 30px;
+                line-height: 30px;
                 padding-left: 8%;
-                margin: 60px 45px 0px 45px;
+                margin: 30px 20px 0px 20px;
                 transform: rotate(720deg);
                 transition: transform 1000ms;
             }
