--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -3,6 +3,7 @@ header img {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
+    width: 40%;
 }
 
 /*Recherche par ville*/
@@ -13,13 +14,13 @@ header img {
     box-shadow: inset 0px 5px 5px 0px #dddddd;
     margin-top: 1em;
     i {
-        font-size: 2.5em;
-        padding: 2rem;
-        margin-left: 10%;
+        font-size: 1.2em;
+        padding: 1rem;
+        margin-left: 80px;
     }
     input {
         background-color: #eaeaea;
-        font-size: 2.2em;
+        font-size: 1.2em;
         border: none;
         box-shadow: inset 0px 5px 5px 0px #dddddd;
         &:focus-visible {
@@ -35,25 +36,27 @@ header img {
     justify-content: space-evenly;
     align-items: center;
     h2 {
-        font-size: 4em;
+        font-size: 1.7em;
         text-align: center;
         margin: 1.5em 2em 0.5em 2em;
     }
     p {
-        font-size: 3em;
+        font-size: 1.2em;
         text-align: center;
         margin-top: 0em;
+        color: #444444;
     }
 }
 
 /**Partie tutoriel**/
 
 .tuto {
-    margin: 4em 4em;
+    margin: 2em 0.5em;
     & h2 {
-        font-size: 4em;
+        font-size: 1.8em;
         margin-top: 1.5em;
         margin-bottom: 0.2em;
+        margin-left: 0.4em;
     }
     &__etapes {
         display: flex;
@@ -65,23 +68,23 @@ header img {
             background-color: #f6f6f6;
             border-radius: 40px;
             box-shadow: 0em 0.2em 0.6em #d4d4d4;
-            margin: 2em 2em;
-            padding: 1em;
+            margin: 1em;
+            padding: 0.5em;
             width: 95%;
             position: relative;            
             & i {
-                line-height: 128px;
-                font-size: 3em;
+                line-height: 62px;
+                font-size: 1.5em;
                 color: #5b5b5b;
             }
             &__texte {
-                font-size: 2.5em;
-                margin-right: 40px;
+                font-size: 1.2em;
+                font-weight: bold;
                 width: 75%;
                 text-align: center;
             }
             &__chiffre {
-                font-size: 2.5em;
+                font-size: 1.2em;
                 color: #ffff;
                 background-color: $color-primary;
                 border-radius: 50%;
@@ -109,14 +112,13 @@ header img {
         color: black;
     }
     & h2 {
-        font-size: 4em;
+        font-size: 1.8em;
         margin: 1em 0em 0.5em 0.9em;
         padding-top: 1.5em;
     }
     &__align {
         display: flex;
         flex-direction: column;
-        padding-bottom: 5em;
     }
     &__card {
         width: 90%;
@@ -127,7 +129,7 @@ header img {
         margin-bottom: 3em;
         box-shadow: 0em 0.2em 0.6em #d4d4d4;
         &__image {
-            height: 450px;
+            height: 200px;
             display: flex;
             & img {
                 width: 100%;
@@ -141,13 +143,13 @@ header img {
             justify-content: space-between;
         }
         &__text {
-            margin: 1em 2em;
+            margin: 1em 1em;
             & h3 {
-                font-size: 2.8em;
-                margin: 0.3em 0em;
+                font-size: 1.4em;
+                margin: 0em;
             }
             & p {
-                font-size: 2.5em;
+                font-size: 1.2em;
                 margin: 0.1em 0em;
             }
         }
