--- a/sass/Layout/_menu.scss
+++ b/sass/Layout/_menu.scss
@@ -36,7 +36,7 @@
         }
     }
     &__details {
-        margin-bottom: -120px;
+        margin-bottom: -60px;
         &__title {
             width: 92%;
             margin-left: auto;
@@ -50,9 +50,15 @@
                 bottom: -5px;
                 width: 13%;
                 border-bottom: 3px solid $color-tertiary;
+                @media screen and (min-width: 900px) {
+                    left: 45%;
+                }
             }
             & p {
                 font-size: 1.3em;
+                @media screen and (min-width: 900px) {
+                    text-align: center;
+                }
             }
         }
     }
