--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -3,7 +3,7 @@ header img {
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
-    width: 40%;
+    width: 250px;
 }
 
 /*Recherche par ville*/
@@ -62,6 +62,9 @@ header img {
         display: flex;
         flex-direction: column;
         align-items: center;
+        @media screen and (min-width: 1020px) {
+            flex-direction: row;
+        }
         &__detail {
             display: flex;
             justify-content: center;
@@ -71,7 +74,8 @@ header img {
             margin: 1em;
             padding: 0.5em;
             width: 95%;
-            position: relative;            
+            position: relative;
+            max-width: 500px;         
             & i {
                 line-height: 62px;
                 font-size: 1.5em;
@@ -119,6 +123,10 @@ header img {
     &__align {
         display: flex;
         flex-direction: column;
+        @media screen and (min-width: 1020px) {
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
     }
     &__card {
         width: 90%;
@@ -128,6 +136,7 @@ header img {
         margin-right: auto;
         margin-bottom: 3em;
         box-shadow: 0em 0.2em 0.6em #d4d4d4;
+        max-width: 400px;
         &__image {
             height: 200px;
             display: flex;
