--- a/sass/Pages/_accueil.scss
+++ b/sass/Pages/_accueil.scss
@@ -62,6 +62,7 @@ header img {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: space-evenly;
         @media screen and (min-width: 1020px) {
             flex-direction: row;
         }
@@ -114,6 +115,7 @@ header img {
     & a {
         text-decoration: none;
         color: black;
+        position: relative;
     }
     & h2 {
         font-size: 1.8em;
@@ -163,4 +165,18 @@ header img {
             }
         }
     }
+}
+
+.new {
+    position: absolute;
+    color: #008766;
+    background-color: #99e2d0;
+    right: 15px;
+    top: 15px;
+    font-size: 0.9em;
+    font-weight: bold;
+    padding: 0em 0.7em;
+    margin-block-start: 0.3em;
+    margin-block-end: 0.3em;
+    border-radius: 3px;
 }
