--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,14 @@
     transform: translateY(0em);
   }
 }
+@keyframes fill-heart {
+  from {
+    opacity: 10%;
+  }
+  to {
+    opacity: 100%;
+  }
+}
 * {
   box-sizing: border-box;
 }
@@ -78,6 +86,7 @@ footer__link {
   color: #f6f6f6;
 }
 .heart-icon:hover {
+  animation: fill-heart 1000ms;
   text-shadow: none;
   background: linear-gradient(to bottom, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 40%);
   -webkit-background-clip: text;
@@ -94,12 +103,12 @@ footer__link {
   border: none;
   box-shadow: 0.1em 0.1em 0.2em #c5c5c5, -0.1em 0em 0.2em #c5c5c5;
   opacity: 1;
-  transition: all 1000ms;
+  transition: opacity 1000ms, box-shadow 500ms;
 }
 .button:hover {
   cursor: pointer;
   opacity: 0.8;
-  box-shadow: 0.3em 0.3em 0.3em #c5c5c5, -0.3em 0em 0.3em #c5c5c5;
+  box-shadow: 0.2em 0.2em 0.1em #c5c5c5, -0.2em 0em 0.1em #c5c5c5;
 }
 .button--search {
   margin-bottom: 3.5em;
@@ -274,7 +283,7 @@ footer__link {
   height: 30px;
   line-height: 30px;
   padding-left: 8%;
-  margin: 30px 20px 0px 20px;
+  margin: 25px 20px 0px 20px;
   transform: rotate(720deg);
   transition: transform 1000ms;
 }
