--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -5,3 +5,5 @@ $color-tertiary: #99E2D0;
 $num-dishes: 10;
 $anim-duration: 1500ms;
 $anim-delay: calc($anim-duration / $num-dishes);
+
+$loader-size: 6vh;
