--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,22 @@
     opacity: 100%;
   }
 }
+@keyframes loader {
+  from {
+    transform: scale(50%);
+  }
+  to {
+    transform: scale(100%);
+  }
+}
+@keyframes hide-loader {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
 * {
   box-sizing: border-box;
 }
@@ -306,6 +322,48 @@ header img {
   margin-right: auto;
   margin-top: 10px;
   width: 250px;
+}
+
+/*Loader*/
+.loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background-color: white;
+  animation: hide-loader 200ms 3000ms forwards;
+}
+
+.loader {
+  width: 36vh;
+  height: 6vh;
+  display: flex;
+  justify-content: space-evenly;
+}
+.loader__circle {
+  height: 100%;
+  width: 6vh;
+  border-radius: 50%;
+  animation: loader 600ms backwards ease-in-out;
+  animation-direction: alternate;
+  animation-iteration-count: 3;
+}
+.loader__circle--1 {
+  background-color: #9356DC;
+  animation-delay: 200ms;
+}
+.loader__circle--2 {
+  background-color: #FF79DA;
+  animation-delay: 400ms;
+}
+.loader__circle--3 {
+  background-color: #99E2D0;
+  animation-delay: 600ms;
 }
 
 /*Recherche par ville*/
